tests/typing/pass/constructor_precond/constructor_precond_pass2.act
contract A

constructor(uint x, uint y)
iff
    inRange(uint, x + y)
    x + y > 42
creates
    uint a := x
    uint b := y

contract B

constructor(uint p, uint q)
iff
    p > 30
    q > 20
    inRange(uint, p + q)   
creates
    A a := new A(p, q)

transition foo(uint m, uint n)
iff
    m > 30
    n > 50
    inRange(uint, m + n)   
updates
    a := new A(m, n)

contract C

constructor(uint alpha, uint beta)
iff
    alpha > 100
    beta >= 21
    inRange(uint, alpha + beta)
creates
    B b := new B(alpha, beta)
